updated verifier